💫Changes on modules, added new command for LunarDB module management, etc.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,5 @@
   "editor.formatOnSave": true,
   "editor.fontFamily": "Consolas, 'Courier New', monospace",
   "terminal.integrated.fontFamily": "FiraCode Nerd Font",
+  "C_Cpp.errorSquiggles": "disabled"
 }
