--- a/.github/workflows/cpp_and_modules_test.yml
+++ b/.github/workflows/cpp_and_modules_test.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Make lunar.exe executable
+      run: chmod +x ./bin/lunar.exe
     - name: Run lunar.exe
       run: ./bin/lunar.exe
       
