🔨Added a QUIT step to stop loops while building.

--- a/.github/workflows/cpp_and_modules_test.yml
+++ b/.github/workflows/cpp_and_modules_test.yml
@@ -19,7 +19,11 @@ jobs:
         cd src
         g++ -std=c++17 main.cpp cache.cpp saved.cpp sql.cpp module.cpp -o ../bin/lunar.exe
     - name: Run lunar executable
-      run: ./bin/lunar.exe
+      run: |
+        ./bin/lunar.exe
+        SET hello world
+        GET hello
+        QUIT
       
   test-rust-modules:
     runs-on: ubuntu-latest
@@ -37,3 +41,4 @@ jobs:
         cd modules/${{ matrix.module }}
         cargo run
         HELP
+        QUIT
