⚒️changes on .gitignore, builds.yml, go mod & go.sum, main.go, openapi.yaml and routes.go for fixing the API system of **LunarDB**, lunar.exe,  ai.rs and main.rs (#1) ⚙️added sharding feature and handlers for handling related task for LunarDB, rag.rs for R.A.G and LLM computation embedding.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ lunardb_server.exe
 # test
 test/
 
+# environment files
+*.env
+
 # .vscode
 .vscode/
 
@@ -23,3 +26,7 @@ src/hello
 # tarballz
 .tar
 .tar.gz
+
+# .idea
+**.idea/
+.idea/
