⚙️UPDATE builds.yml [#00520]

--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -29,10 +29,16 @@ jobs:
         brew update
         brew install gcc
 
+    - name: Go to "src"
+      run: cd src/
+
     - name: Compile
       run: |
         mkdir -p bin
         g++ -std=c++17 main.cpp cache.cpp saved.cpp sql.cpp module.cpp -o bin/lunar
+
+    - name: Escape src/
+      run: cd ..
 
     - name: Create DMG (macOS)
       if: matrix.os == 'macos-latest'
