--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         mkdir -p bin
         cd src
-        g++ -std=c++17 main.cpp cache.cpp saved.cpp sql.cpp module.cpp -o bin/lunar
+        g++ -std=c++17 main.cpp cache.cpp saved.cpp sql.cpp module.cpp -o ../bin/lunar
 
     - name: Create DMG (macOS)
       if: matrix.os == 'macos-latest'
