--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -21,7 +21,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential liblua5.4-dev
+        sudo apt-get install -y build-essential liblua5.4-dev libpqxx-dev libpq-dev
 
     - name: Install dependencies (macOS)
       if: matrix.os == 'macos-latest'
@@ -33,7 +33,7 @@ jobs:
       run: |
         mkdir -p bin
         cd src
-        g++ -std=c++17 main.cpp cache.cpp saved.cpp sql.cpp module.cpp hashing.cpp -I/usr/include/lua5.4 -llua5.4 -o ../bin/lunar
+        g++ -std=c++17 main.cpp cache.cpp saved.cpp sql.cpp module.cpp hashing.cpp -I/usr/include/lua5.4 -llua5.4 -lpqxx -lpq -o ../bin/lunar
 
     - name: Create DMG (macOS)
       if: matrix.os == 'macos-latest'
