--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -21,7 +21,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y build-essential liblua5.4-dev libpqxx-dev libpq-dev
+        sudo apt-get install -y build-essential liblua5.4-dev libpqxx-dev libpq-dev libcurl4-openssl-dev
 
     - name: Compile
       run: |
