--- a/modules/lunarvector/Cargo.toml
+++ b/modules/lunarvector/Cargo.toml
@@ -3,6 +3,7 @@ name = "lunarvector"
 description = "A Vector database module for LunarDB"
 categories = ["vector", "database", "rust", "module"]
 version = "0.1.0"
+keywords = ["vector", "embeddings", "database", "module"]
 authors = ["Kazooki123", "StarloExoliz"]
 edition = "2021"
 license = "MIT"
