[FIXED] replacing "tch" & "torch-sys" with developer-friendly machine learning crates.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [workspace]
 resolver = "2"
 members = [
-  "modules/lunarai",
   "modules/lunargis",
   "modules/lunarjson",
   "modules/lunarsearch",
   "modules/lunarstream",
   "modules/lunarvector"
 ]
+exclude = ["modules/lunarai"]
