--- a/modules/lunarai/Cargo.toml
+++ b/modules/lunarai/Cargo.toml
@@ -13,21 +13,20 @@ name = "lunarai"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-tokio = { version = "1.32", features = ["full"] }
-futures = "0.3"
-tokenizers = "0.21"
-safetensors = "0.4.5"
-tch = "0.18.1"
-ndarray = "0.16.1"
+nalgebra = "0.32"
+rand = "0.8"
+rand_distr = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-thiserror = "2.0"
-anyhow = "1.0"
-rayon = "1.8"
-cached = "0.54"
-lru = "0.12.5"
+unicode-segmentation = "1.10"
+rust-stemmers = "1.2"
+stop-words = "0.7"
+thiserror = "1.0"
+rayon = "1.7"
+hashbrown = "0.14"
+
+[dev-dependencies]
+criterion = "0.5"
 
 [build-dependencies]
 cbindgen = "0.26"
-cmake = "0.1"
-torch-sys = "0.18.1"
