--- a/modules/lunarai/Cargo.toml
+++ b/modules/lunarai/Cargo.toml
@@ -14,6 +14,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 nalgebra = "0.32"
+chrono = "0.4"
 rand = "0.8"
 rand_distr = "0.4"
 serde = { version = "1.0", features = ["derive"] }
