--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -27,11 +27,11 @@ jobs:
       run: |
         mkdir -p bin
         cd src
-        g++ -std=c++17 main.cpp core.cpp cache.cpp connect.cpp concurrency.cpp saved.cpp sql.cpp module.cpp hashing.cpp parser.cpp sharding.cpp -I/usr/include/lua5.4 -llua5.4 -lpqxx -lpq -lcurl -lboost_system -pthread -o ../bin/lunar
+        g++ -std=c++17 main.cpp core.cpp cache.cpp connect.cpp concurrency.cpp saved.cpp sql.cpp module.cpp hashing.cpp parser.cpp sharding.cpp -I/usr/include/lua5.4 -llua5.4 -lpqxx -lpq -lcurl -lboost_system -pthread -o ../bin/lunardb
 
     - name: Upload artifact (Linux)
       if: matrix.os == 'ubuntu-latest'
       uses: actions/upload-artifact@v4.4.3
       with:
         name: lunar-linux
-        path: bin/lunar
+        path: bin/lunardb
