--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -27,7 +27,7 @@ jobs:
       run: |
         mkdir -p bin
         cd src
-        g++ -std=c++17 main.cpp core.cpp cache.cpp connect.cpp concurrency.cpp saved.cpp sql.cpp module.cpp hashing.cpp parser.cpp sharding.cpp -I/usr/include/lua5.4 -llua5.4 -lpq -lcurl -lboost_system -pthread -o ../bin/lunardb
+        g++ -std=c++17 main.cpp core_MAIN.cpp cache.cpp connect.cpp concurrency.cpp saved.cpp sql.cpp module.cpp hashing.cpp parser.cpp sharding.cpp -I/usr/include/lua5.4 -llua5.4 -lpq -lcurl -lboost_system -pthread -o ../bin/lunardb
 
     - name: Upload artifact (Linux/Ubuntu)
       if: matrix.os == 'ubuntu-latest'
