--- a/.github/workflows/crate-build.yml
+++ b/.github/workflows/crate-build.yml
@@ -1,4 +1,4 @@
-name: Build and Publish
+name: Build and Publish LunarDB
 
 on:
   push:
@@ -23,10 +23,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install Rust toolchain
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        override: true
+      uses: dtolnay/rust-toolchain@stable
 
     - name: Build
       run: cargo build --release
@@ -36,7 +33,7 @@ jobs:
 
     - name: Upload artifact (Linux/Ubuntu)
       if: matrix.os == 'ubuntu-latest'
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: lunardb-ubuntu
         path: target/release/lunardb
@@ -49,10 +46,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Publish to crates.io
         env:
